flexFoorer inject flex

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
     </div>
 
-    <div class="footer cf">
+    <div class="footer">
             <div class="footer-navigation">
                 <ul class="navigation-group">
                     <li><a href="">About us</a></li>
@@ -210,7 +210,7 @@
                     <li><a href="">PremiumBook</a></li>
                 </ul>
             </div>
-            <div class="social cf">
+            <div class="social">
                 <ul class="social-network">
                     <li><a href=""><img src="images/facebook.png"></a></li>
                     <li><a href=""><img src="images/vk.png"></a></li>
